Bug 480700 - kwin crashes when preview night light values under 1000
Summary: kwin crashes when preview night light values under 1000
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.92.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-01 19:35 UTC by Edip
Modified: 2024-02-02 05:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Edip 2024-02-01 19:35:50 UTC
SUMMARY


STEPS TO REPRODUCE
1. open your terminal
2. execute: qdbus org.kde.KWin /ColorCorrect org.kde.kwin.ColorCorrect.preview 999
3. if it didnt crash via 999 try 998 or 950

OBSERVED RESULT
kwin crashes/restart

EXPECTED RESULT
kwin shouldnt crash

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Kernel Version: 6.7.2-1-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 2 × Intel® Pentium® CPU 2020M @ 2.40GHz
Memory: 11.6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 2500

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2024-02-01 21:31:45 UTC
#0  0x00007fbbb14a4d7c in KWin::ColorDevicePrivate::recalculateFactors (this=0x247a8e0) at /home/nico/kde/src/kwin/src/colors/colordevice.cpp:56
#1  0x00007fbbb14a4e45 in KWin::ColorDevice::update (this=0x24796d0) at /home/nico/kde/src/kwin/src/colors/colordevice.cpp:137
#2  0x00007fbbae1bce13 in QObjectPrivate::Sender::~Sender (this=0x7ffe3d775b00, __in_chrg=<optimized out>)
    at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject_p_p.h:238
#3  doActivate<false> (sender=0x24796b0, signal_index=3, argv=0x7ffe3d775b70) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject.cpp:4092
#4  0x00007fbbae1ca8da in QPropertyBinding<Qt::TimerType>::QPropertyBinding<QtPrivate::QBindableInterfaceForProperty<QObjectBindableProperty<QTimerPrivate, Qt::TimerType, QTimerPrivate::_qt_property_type_offset, nullptr>, void>::<lambda(const QUntypedPropertyData*, const QPropertyBindingSourceLocation&)>::<lambda()> >
    (location=<optimized out>, f=<optimized out>, this=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qproperty.h:607
#5  Qt::makePropertyBinding<QtPrivate::QBindableInterfaceForProperty<QObjectBindableProperty<QTimerPrivate, Qt::TimerType, QTimerPrivate::_qt_property_type_offset, nullptr>, void>::<lambda(const QUntypedPropertyData*, const QPropertyBindingSourceLocation&)>::<lambda()> > (location=<optimized out>, f=<optimized out>)
    at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qproperty.h:215
#6  operator() (__closure=0x0, location=..., d=0x4) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qproperty.h:608
#7  _FUN () at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qproperty.h:607
#8  0x00007fbbae1cb388 in ??? () at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qtimer.cpp:255
#9  0x0000000000000000 in ??? ()
Comment 2 Bug Janitor Service 2024-02-01 22:01:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5089
Comment 3 Zamundaaa 2024-02-02 00:59:23 UTC
Git commit cc72778d5efea1ddec360e04474fd702c312b394 by Xaver Hugl.
Committed on 02/02/2024 at 00:59.
Pushed by zamundaaa into branch 'master'.

plugins/nightcolor: clamp preview color temperature to be somewhat sane

M  +1    -0    src/plugins/nightcolor/nightcolormanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/cc72778d5efea1ddec360e04474fd702c312b394
Comment 4 Zamundaaa 2024-02-02 01:19:21 UTC
Git commit 9180693c50518e39f49c6eec34a5cdc918539ec9 by Xaver Hugl.
Committed on 02/02/2024 at 01:06.
Pushed by zamundaaa into branch 'Plasma/6.0'.

plugins/nightcolor: clamp preview color temperature to be somewhat sane
(cherry picked from commit cc72778d5efea1ddec360e04474fd702c312b394)

M  +1    -0    src/plugins/nightcolor/nightcolormanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/9180693c50518e39f49c6eec34a5cdc918539ec9