plugins/nightcolor: clamp preview color temperature to be somewhat sane

BUG: 480700
(cherry picked from commit cc72778d5efea1ddec360e04474fd702c312b394)